#71: don't allow revoked at in post
