# src/main/resources/api/swagger.yml
@@ -53,7 +53,7 @@ paths:
             the revocation associated with the tokens to revoke
           in: body
           schema:
-            $ref: '#/definitions/Revocation'
+            $ref: '#/definitions/RevocationRequest'
       responses:
         # Response code
         201:
@@ -129,6 +129,16 @@ definitions:
         enum: [ "TOKEN", "CLAIM", "GLOBAL" ]
       revoked_at:
         type: integer
+      data:
+        description: |
+        type: object
+        format: '#/definitions/Data'
+  RevocationRequest:
+    type: object
+    properties:
+      type:
+        type: string
+        enum: [ "TOKEN", "CLAIM", "GLOBAL" ]
       data:
         description: |
         type: object
